syntax = "proto3";

option csharp_namespace = "NFTAuctionService";

service GrpcNFTAuction {
    rpc GetNFTAuction (GetNFTAuctionRequest) returns (GrpcNFTAuctionResponse);
}

message GetNFTAuctionRequest {
    string id = 1;
}

message GrpcNFTAuctionModel {
    string id = 1;
    string seller = 2;
    string nftAuctionEndAt = 3;
    int32 reservePrice = 4;
}

message GrpcNFTAuctionResponse {
    GrpcNFTAuctionModel nftAuction = 1;
}